2004-08-26  Dan Winship  <danw@novell.com>

	* configure.in: Bump version to 2.2.0.

	* AUTHORS: Update this to reflect the last 2 years.

	* NEWS: Brief summary of 1.99.x -> 2.2 changes

	* README, TODO: Updates

2004-08-26  Dan Winship  <danw@novell.com>

	* libsoup/*: add/fix lots of gtk-doc comments
	
	* libsoup/soup-misc.c (soup_str_case_hash, soup_str_case_equal):
	Fix bug noticed while documenting. (We were using the
	locale-case-insensitive functions rather than the g_ascii_ ones.)

	* libsoup/soup-message.h (SoupMessageFlags): remove the (never
	implemented) NO_PIPELINE and NO_COOKIE flags.

	* docs/reference/tmpl/*.sgml: Regenerate, fill in some stuff.
	There are still problems here with gtk-doc not recognizing many of
	the objects in libsoup...

2004-08-13  JP Rosevear  <jpr@novell.com>

	* configure.in: bump version, libtool number

2004-08-09  Dan Winship  <danw@novell.com>

	* libsoup/soup-connection.c (soup_connection_connect_sync): Don't
	use conn after emitting the "connect_result" signal, since it
	might be destroyed by that. Based on a patch from hpj.

2004-08-02  Dan Winship  <danw@novell.com>

	* libsoup/soup-uri.h: Add flag "broken_encoding" to SoupUri.

	* libsoup/soup-uri.c: (soup_uri_to_string): if broken_encoding is
	set, don't re-encode the URL parts. Based on a patch by
	Alfred.Peng@Sun.COM.

2004-07-19  JP Rosevear  <jpr@novell.com>

	* configure.in: bump version, libtool number

2004-07-15  Dan Winship  <danw@novell.com>

	* libsoup/soup-session-sync.c (send_message): Simplify this. If
	the message comes back from soup_connection_send_request not
	FINISHED, get a new connection rather than reusing the old one.
	This fixes a race condition in which a connection could end up
	double-booked, and fixes the handling of messages that get
	redirected to another server.

2004-07-13  Dan Winship  <danw@novell.com>

	* libsoup/soup-session.c (connect_result): If the connection
	attempt succeeded, reserve the connection before releasing